couchbase/deploy/os/application/performance/couchbase-ui-performance-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: couchbase-ui-pod
  labels:
    pod: couchbase-ui
    app: couchbase-ui
  namespace: ngwsa-performance
  annotations:
    pod.alpha.kubernetes.io/init-containers: '[
        {
            "name": "bootstrap",
            "image": "registry.localdomain:443/couchbase-install:v0.1.28",
            "args": ["--work-dir=/work-dir"],
            "env": [
              {
                  "name": "POD_NAMESPACE",
                  "valueFrom": {
                      "fieldRef": {
                          "apiVersion": "v1",
                          "fieldPath": "metadata.namespace"
                      }
                  }
               }
            ],
            "volumeMounts": [
                {
                    "name": "workdir",
                    "mountPath": "/work-dir"
                }
            ]
        }
    ]'
spec:
  containers:
    - name: couchbase-ui
      image: couchbase:enterprise-4.5.1
      # export ports from dockerfile 
      ports:
        - containerPort: 8091
        - containerPort: 8092
        - containerPort: 8093
        - containerPort: 8094
        - containerPort: 11209
        - containerPort: 11210
        - containerPort: 11211
        - containerPort: 18091
        - containerPort: 18092
        - containerPort: 18093
      command:
        - "/work-dir/bootstrap.sh"
        - "--config-dir=/config"
        - "--secrets-dir=/secrets"
      resources:
        limits:
          cpu: 2000m
          memory: 4096Mi
        requests:
          cpu: 2000m
          memory: 4096Mi
      volumeMounts:
        - name: couchbase-secrets-volume
          mountPath: /secrets
        - name: couchbase-config-volume
          mountPath: /config
        - name: workdir
          mountPath: /work-dir
  volumes:
    - secret:
        secretName: couchbase-secrets
      name: couchbase-secrets-volume
    - configMap:
        name: couchbase-config
      name: couchbase-config-volume
    - emptyDir: {}
      name: workdir
